--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -38,6 +39,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -46,7 +49,40 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$nav_version"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     //noinspection GradleCompatible
     implementation 'me.relex:circleindicator:1.3.2'
 
+    //animation
+    implementation 'com.github.hajiyevelnur92:intentanimation:1.0'
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    annotationProcessor "com.google.dagger:hilt-compiler:2.38.1"
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0'
+
+    //RxJava Library
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.2.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
+    //Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    //okHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.2.2'
+    implementation 'com.jakewharton.retrofit:retrofit1-okhttp3-client:1.0.2'
+
+    //interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+
+    //Lombok Library
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+    //ProgressBars
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'net.bohush.geometricprogressview:geometricprogressview:1.1.1'
+    implementation 'com.steelkiwi:sliding-square-loader-view:1.0.0'
 }
