--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,10 @@
 <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/appicon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/appicon"
+        android:name=".Clesses.Others.MainApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodTwo">
         <activity android:name=".MVVM.ui.mainActivity.MainActivity">
